Update documentation for Java 21 and Spring Boot 3.5.15 configuration details